--- a/index.html
+++ b/index.html
@@ -3,11 +3,69 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
-    <style> body {padding: 0; margin: 0;} </style>
+    <style> body {padding: 0; margin: 0;}
+
+ .caratteristiche {
+      background-color: rgb(0, 46, 74);
+      width: 100vw;
+      height: 100vh;
+      /* width: 120px;
+      height: auto; */
+      content:url(./assets/background.jpg);
+
+    }
+
+    .shell1Container {
+width: 120px;
+height: auto;
+content:url(./assets/shell1.png);
+}
+
+.shell2Container {
+width: 120px;
+height: auto;
+content:url(./assets/shell2.png);
+}
+
+.shell3Container {
+width: 120px;
+height: auto;
+content:url(./assets/shell3.png);
+}
+
+.shell4Container {
+width: 120px;
+height: auto;
+content:url(./assets/shell4.png);
+}
+
+.shell5Container {
+width: 120px;
+height: auto;
+content:url(./assets/shell5.png);
+}
+
+.shell6Container {
+width: 120px;
+height: auto;
+content:url(./assets/shell6.png);
+}
+
+.caratteristicheTesto {
+  text-align: center;
+  width: 100px;
+  text: shish;
+}
+
+    </style>
     <script src="p5.min.js"></script>
     <!-- <script src="addons/p5.sound.min.js"></script> -->
+    <script src="addons/p5.dom.min.js"></script>
+    <script src="addons/p5.sound.min.js"></script>
     <script src="sketch.js"></script>
   </head>
   <body>
+    <div id="contenitore">
+  </div>
   </body>
 </html>
